--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,12 @@ body{
 
 main{
     background-color: white;
-    width: 700px;
+    width: 1000px;
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.281);
 }
 
 img.centro{
-   justify-items: center;
+   align-items: center;
 }
