--- a/css/style.css
+++ b/css/style.css
@@ -28,4 +28,17 @@ h1{
 h2{
     font-size: 1.5em;
     color:rgb(68, 7, 167) ;
+
 }
+
+a{
+    text-decoration: none;
+    font-weight: bold;
+    color:rgb(68, 7, 167) ;
+  }
+
+  a:hover {
+      text-decoration: underline;
+      color:rgb(68, 7, 167) ;
+
+  }
