--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,28 @@
 }
 
 body{
-    background-color: rgb(14, 184, 141);
+    background-color: rgb(91, 223, 190);
+       
 }
 
 main{
     background-color: white;
-    width: 1000px;
+    width: 800px;
     margin: auto;
-    padding: 10px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.281);
+    padding: 25px;
+    box-shadow: 5px 5px 5px  rgba(0, 0, 0, 0.425);
 }
 
-img.centro{
+img{
    align-items: center;
+   padding:15px;
+}
+
+#alagoas{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: justify;
 }
 
 h1{
@@ -31,7 +40,11 @@ h2{
 
 }
 
-a{
+h3{
+    font-size: 1.5em;
+}
+
+button{
     text-decoration: none;
     font-weight: bold;
     color:rgb(68, 7, 167) ;
@@ -39,6 +52,6 @@ a{
 
   a:hover {
       text-decoration: underline;
-      color:rgb(68, 7, 167) ;
-
+      color:rgb(7, 167, 7) ;
+      font-weight: bold;
   }
